[project]
name = "policy-methods-library"
version = "1.0.0"
description = "A collection of functions used to check adherence to the GitHub Usage Policy in ONS."
authors = [
    {name = "ONS-Innovation/keh-dev"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.15"
mkdocstrings-python = "^1.16.12"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-xdist = "^3.8.0"
pytest-cov = "^7.1.0"
ruff = "^0.15.12"
mypy = "^1.20.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
repository = "http://github.com/ONS-Innovation/keh-policy-methods-library"
